# myotracker

./: LICENSE  README.md  echo_demo.py  myotracker_demo.py  pyproject.toml  setup.py  train.py
checkpoints/: myotracker_051975.pt
myotracker/: data_augments.py  datasets.py  echo_predictor.py  pytorch_to_onnx.py  trainer.py  version.py
myotracker/datasets/: augmentation.py  dataclass_utils.py  echo_dataset.py  utils.py
myotracker/evaluation/: evaluate.py
myotracker/evaluation/core/: evaluator.py
myotracker/model/: blocks.py  embeddings.py  evaluation_predictor.py  losses.py  model_utils.py  myotracker_model.py  myotracker_refinement.py
myotracker/models/: myotracker.onnx  myotracker_scripted.pt
myotracker/network/: blocks.py  embeddings.py  losses.py  model_utils.py  myotracker.py  myotracker_iterative.py
myotracker/utils/: visualizer.py
