[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myotracker"
version = "0.0.1"
description = "MyoTracker network package."
authors = [
    { name = "Artem Chernyshov", email = "artem.chernyshov@ntnu.no" }
]
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "opencv-python",
    "scipy",
    "scikit-image"
]